# ssm_schrodinger

./: .gitignore  BUILD_REPORT.md  CHANGELOG.md  LICENSE  Makefile  PATCH_APPLY_NOTES.md  PHASE_STATUS.md  README.md  README_ORIGINAL_INTENT.md  README_SOURCE_REGISTRY.md  RELEASE_NOTES.md  VERSION_LOCK_REPORT.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADVANCED_PRODUCTION_HARDENING.md  CAPABILITY_MATRIX.md  RELEASE_CHECKLIST_V1_3_2.md  RELEASE_CHECKLIST_V1_5_DEV.md  RELEASE_CHECKLIST_V2_0_DEV.md  SPEC_COMPLIANCE_MATRIX.md  V1_1_PRE_ONLINE_HARDENING.md  V1_2_ONLINE_AGENT.md  V1_3_GENERAL_DOMAIN_FOUNDATION.md  V1_5_PLATFORM_LAYER.md  V2_0_ACCEPTANCE_MATRIX.md  V2_0_CHANGE_MANIFEST.md  V2_0_LOCAL_VALIDATION.md  V2_0_PLATFORM.md  architecture_spec_addendum_v1_1_symbolic_logic.md  architecture_spec_v1_1.md  logic_decision_layer_spec.md
examples/crm_pipeline_api/: project.sml.md
examples/expense_approval_api/: project.sml.md
examples/hr_leave_api/: project.sml.md
examples/inventory_api/: project.sml.md
examples/product_missing_schema/: project.sml.md
examples/school_records_api/: project.sml.md
examples/ticketing_api/: project.sml.md
examples/todo_api/: project.sml.md
prompts/: handoff_prompt_v1_1.md
registry/: source_registry.yaml
scripts/: secret_scan.py  tag_v1_3_2.sh  test_v13_e2e.sh  test_v15_e2e.sh  test_v20_e2e.sh
src/ssm/: __init__.py  errors.py  models.py  pipeline.py
src/ssm/agents/: __init__.py  embeddings.py  intent_agent.py  online.py  providers.py  repair_agent.py  schemas.py  settings.py  sml_agent.py
src/ssm/cli/: main.py
src/ssm/domain_packs/: __init__.py  registry.py
src/ssm/evidence/: __init__.py  (+1 more)
tests/: test_agent_interfaces.py  test_cli_and_codegen.py  test_evidence_validation.py  test_foundation_generalization.py  test_offline_determinism.py  test_online_agent_integration.py  test_online_repair_seed.py  test_online_sml_repair.py  test_parser_semantic_logic.py
(+16 files in other folders)
