[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-software-markup"
version = "1.5.0.dev0"
description = "General-purpose semantic app platform compiler with evidence records, SaaS primitives, workflow runtime, repair loop, and generated admin shell."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Semantic Software Markup Project" }]
license = { text = "Apache-2.0" }
dependencies = [
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "ruff>=0.15.20",
]

[project.optional-dependencies]
online = [
  "pip-audit>=2.7",
  "bandit>=1.7",
]
agents = [
  "pydantic-ai>=0.0.1",
]
fastapi-target = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pytest>=8",
  "httpx>=0.27",
  "pydantic-settings>=2.4",
  "PyJWT>=2.8",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "pydantic-settings>=2.4",
  "PyJWT>=2.8",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "psycopg[binary]>=3.1",
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest-cov>=5",
  "pip-audit>=2.7",
  "bandit>=1.7",
]

[project.scripts]
smlc = "ssm.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
[tool.coverage.run]
branch = true
source = ["ssm"]
omit = [
  "src/ssm/agents/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
